# corpnpc

./: LICENSE  README.md
corpnpc/: README.md  pyproject.toml  requirements.txt
corpnpc/corpnpc/: cli.py  crack.py  embed.py  entropy.py  fingerprint.py  report.py  score.py
